	PR fortran/30285 	* module.c (struct written_common, written_commons): New structure. 	(compare_written_commons, free_written_common, write_common_0): 	New functions. 	(write_common): Call recursive function write_common_0.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130257 138bc75d-0d04-0410-961f-82ee72b054a4